<resources>
    <string name="app_name">酷音乐</string>
    <string name="img_content_description">这是一张图片</string>

    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_personal">个人中心</string>

    <string name="logout">退出登录</string>
    <string name="str_username">用户名：%s</string>
    <string name="change_password">修改密码</string>
    <string name="confirm">确 认</string>
    <string name="recommend_list">推荐歌单</string>
    <string name="hot_music">最热音乐</string>
    <string name="album_list">专辑列表</string>
</resources>
