<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/nav_bar" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:contentDescription="@string/img_content_description"
        android:src="@drawable/ic_music_red" />

    <com.yu.hu.coolmusic.widget.InputView
        android:id="@+id/iv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:input_hint="@string/phone_number"
        app:input_icon="@drawable/ic_phone"
        app:input_type="phone" />

    <com.yu.hu.coolmusic.widget.InputView
        android:id="@+id/iv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:input_hint="@string/password"
        app:input_icon="@drawable/ic_password"
        app:input_type="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/register"
        android:textColor="@color/mainColor" />

    <Button
        android:id="@+id/btn_login"
        style="@style/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login" />
</LinearLayout>