<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/nav_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/str_username"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/item_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/change_password"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg"
        android:text="@string/logout" />

</LinearLayout>